--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Client</title>
+  <title>Weather App</title>
   <!-- View-port Basics: http://mzl.la/VYREaP -->
   <!-- This meta tag is used for mobile device to display the page without any zooming,
        so how much the device is able to fit on the screen is what's shown initially. 
@@ -24,7 +24,7 @@
   <div class="container">
     <!--header section start-->
     <header>
-      
+      <p class="haedding">Weather App</p>
     </header>
     <!--header section start-->
     <!--main section start-->
