Main block HTML Created

--- a/index.html
+++ b/index.html
@@ -29,7 +29,30 @@
     <!--header section start-->
     <!--main section start-->
     <main>
-
+      <div class="wrapper">
+        <div class="form-container">
+          <form class="form-body">
+            <div class="form-group">
+              <input type="text" id="txt-input" placeholder="Enter City Name Here">
+              <span class="error">An Erro occurred - City Not Found!</span>
+            </div>
+            <div class="form-control">
+              <input type="button" value="Find" id="find-btn">
+              <input type="reset" value="Clear" id="clear-btn">
+            </div>
+          </form>
+        </div>
+        <div class="output-block">
+          <div class="city-card">
+            <p class="city-name">Badlapur</p>
+            <p class="date">27 Aug 2001</p>
+            <p class="temperature">25 &deg;C</p>
+            <p class="min-max">min max of the day</p>
+            <span class="status">sunny</span>
+            <div class="weather-icon">weather icon</div>
+          </div>
+        </div>
+      </div>
     </main>
     <!--main section end-->
 
