footer HTML Created

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <div class="container">
     <!--header section start-->
     <header>
-      <p class="haedding">Weather App</p>
+      <div class="wrapper">
+        <p class="haedding">Weather App</p>
+      </div>
     </header>
     <!--header section start-->
     <!--main section start-->
@@ -57,8 +59,10 @@
     <!--main section end-->
 
     <!--footer section start-->
-    <footer>      
-
+    <footer>
+      <div class="wrapper">
+        <p>Made By NDG</p>
+      </div>      
     </footer>
     <!--footer section end-->
 
