Header CSS Created

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Weather App</title>
+  <title>Weather API Project</title>
   <!-- View-port Basics: http://mzl.la/VYREaP -->
   <!-- This meta tag is used for mobile device to display the page without any zooming,
        so how much the device is able to fit on the screen is what's shown initially. 
@@ -25,7 +25,7 @@
     <!--header section start-->
     <header>
       <div class="wrapper">
-        <p class="haedding">Weather App</p>
+        <p class="haedding">Weather API Project</p>
       </div>
     </header>
     <!--header section start-->
