--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <form class="form-body">
             <div class="form-group">
               <input type="text" id="txt-input" placeholder="Enter City Name Here">
-              <span class="error">An Erro occurred - City Not Found!</span>
+              <span class="error">An Error Occurred - City Not Found!</span>
             </div>
             <div class="form-control">
               <input type="button" value="Find" id="find-btn">
