--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             <p class="temperature">25 &deg;C</p>
             <p class="min-max">min max of the day</p>
             <span class="status">sunny</span>
-            <div class="weather-icon">weather icon</div>
+            <div class="weather-icon">
+              <img src="https://openweathermap.org/img/wn/10d.png" alt="Weather Icon">
+            </div>
           </div>
         </div>
       </div>
