date display fixed

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p class="min-max">min max of the day</p>
             <span class="status">sunny</span>
             <div class="weather-icon">
-              <img src="https://openweathermap.org/img/wn/10d.png" alt="Weather Icon">
+              <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="Weather Icon">
             </div>
           </div>
         </div>
